examples/test/testpolicy12756.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12756
  namespace: namespace35
spec:
  podSelector:
    matchLabels:
      key48: value35
      key22: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value22
          key46: value23
          key37: value11
      podSelector:
        matchLabels:
          key33: value29
          key13: value36
          key49: value48
